--- a/reading2.html
+++ b/reading2.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading Response</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <p>
-        Put your reading response here
+        Ella Ullendorff starts out with a comeplling point, AI is gaslighting us. She describes a scenario all too well
+        that feels familiar to all of us in today's time, coming across impressive works of art that end up being AI
+        generated content. I would like to point out that this article was written in 2023, this was around when
+        generative AI began to become mainstram. Now in 2026, AI has become integrated in our daily lives. It has it's
+        helpful uses, but there is one thing AI takes from the individual person: creativity.
     </p>
     <hr>
     <a href="index.html">Back</a>
 </body>
+
 </html>
