Classroom Website for (Visual) Principles for Screen
Updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahkei's Class Website, Spring 2026 at WashU</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        html,
+        body {
+            background-color: rgb(174, 226, 165);
+        }
+    </style>
 </head>
 
 <body>
