--- a/profile-card.html
+++ b/profile-card.html
@@ -51,10 +51,10 @@ INSTRUCTIONS:
 <head>
     <!-- Where the word "Laurel" is below, put your name there instead. -->
     <title>Mahkei — (Visual) Principles for Screen, Fall 2025, WashU</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <link rel="stylesheet" href="https://2026-spring-washu.veryinteractive.net/assets/css/class.css" />
-    <link rel="stylesheet" href="https://2026-spring-washu.veryinteractive.net/assets/css/profile.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="https://2026-spring-washu.veryinteractive.net/assets/css/class.css">
+    <link rel="stylesheet" href="https://2026-spring-washu.veryinteractive.net/assets/css/profile.css">
     <style>
         html,
         body {
