Finished all markdown and html variations

--- a/p1/06.html
+++ b/p1/06.html
@@ -8,10 +8,105 @@
 </head>
 
 <body>
-    <h1>SALT + SMOKE</h1>
-    <h2>Where?</h2>
-    <h2>When?</h2>
-    <h2>What?</h2>
+    <h1 id="salt-smoke">SALT + SMOKE</h1>
+    <h2 id="where">Where</h2>
+    <ul>
+        <li>6525 Delmar Blvd. St Louis, MO 63130</li>
+        <li>501 Clark Ave., St. Louis, MO 63102</li>
+        <li>5625 Hampton Ave, St. Louis, MO 63109</li>
+        <li>501 South Main St., St. Charles, MO 63301</li>
+        <li>1386 Clarkson/Clayton Shopping Center, Ellisville, MO 63011</li>
+        <li>4130 Rusty Rd, St. Louis, MO 63128</li>
+    </ul>
+    <h2 id="when">When</h2>
+    <ul>
+        <li>Sunday-Thursday: 11am-9pm</li>
+        <li>Friday-Saturday: 11am-10pm</li>
+    </ul>
+    <h2 id="what">What</h2>
+    <h3 id="salads">Salads</h3>
+    <h4 id="half-8-99-side-4-99-full-13-99">Half, $8.99; Side, $4.99; Full, $13.99</h4>
+    <ul>
+        <li><strong>Caesar Salad</strong></li>
+        <li><strong>Kale Crunch Salad</strong></li>
+        <li>
+            <p><strong>Mix Green Salad</strong></p>
+            <h4 id="add-ons"><strong>Add Ons</strong></h4>
+            <ul>
+                <li>Brisket or Cherry Smoked Salmon, $6.00 </li>
+                <li>Pulled Porked, Falafel, Fried Jalapeno + Cheddar Cheese, Croutons, and White Balsamic Vinaigrette,
+                    $5.00 each </li>
+            </ul>
+        </li>
+    </ul>
+    <h3 id="sandwiches-served-with-choice-of-one-side-">Sandwiches (Served with choice of one side)</h3>
+    <h4 id="substitute-gluten-free-or-vegan-bun-for-2">Substitute: Gluten-Free or Vegan Bun for 2</h4>
+    <ul>
+        <li>Pulled Pork (Made with coleslaw and House Pickles ), $14.99</li>
+        <li>Brisket (Made with Burnt End Mayo and Tobacco Onions), $16.99</li>
+        <li>Cherry Smoked Salmon (Served cold and made with pickled onions, roasted red pepper, greens, smoked tomato
+            mayo), $16.99</li>
+        <li>BLT (Made with Bacon, Smoked Tomato, Lettuce, Smoked Paprika Aioli), $13.99</li>
+        <li>Fried Jalapeno + Cheddar Bologna (Made with chow chow, Honey Grain Mustard), $13.99</li>
+        <li>Grilled Cheese (Made with white American Cheese + Pimento Cheese), $16.99 for Brisket Variation; $14.99 for
+            Pulled Chicken Variation</li>
+        <li>Falaefel Burger (Made with Flaxseed Mayo, Greens, Pepper Jelly), $13.99 </li>
+        <li>Oklahoma Bacon Cheeseburger (Made with White American Cheese, Grilled Onions, S+S 1000 Sauce), $12.99 for a
+            single patty; $15.99 for double patties</li>
+        <li>Chicken Caesar Wrap (Made with Caesar Dressing, Romaine Lettuce, Croutons, Grilled Flour Tortila), $13.99
+            for smoked chicken variation and the buffalo chicken variation </li>
+    </ul>
+    <h3 id="plates">Plates</h3>
+    <h4 id="served-with-a-bacon-cheddar-popover-comes-with-two-sides">Served With a Bacon &amp; Cheddar Popover, Comes
+        WIth Two Sides</h4>
+    <ul>
+        <li>Pulled Pork, $18.99</li>
+        <li>Brisket, $22.99</li>
+        <li>Pulled Chicken, $18.99</li>
+        <li>Smoked Wings, $20.99</li>
+        <li>St Louis Cut Ribs, 1/2 Rack is $19.99; Full Rack is $29.99</li>
+        <li>Fried Jalapeno + Cheddar Bologna, $17.99<h5 id="bestie-combo">Bestie Combo</h5>
+        </li>
+        <li>2 Meats for $21.99</li>
+        <li>3 Meats for $25.99</li>
+        <li>4 Meats for $29.99</li>
+    </ul>
+    <h3 id="sides">Sides</h3>
+    <ul>
+        <li>Beef Fat Fries, $5.99</li>
+        <li>Pit Beans with Smoked Bacon, $4.99 </li>
+        <li>Sweet Pepper Potato Salad, $3.99</li>
+        <li>Coleslaw $3.99</li>
+        <li>White Cheddar Cracker Mac, $5.99</li>
+        <li>Green Bean + Tomato Salad, $4.99</li>
+        <li>Creamed Corn $5.99</li>
+        <li>Brisket Chili $4.99</li>
+        <li>Special Side $4.99</li>
+    </ul>
+    <h3 id="dessert">Dessert</h3>
+    <ul>
+        <li>Lemon Gooey Butter Cake (Made with Mixed Berry Compote, Whipped Cream), $8.99</li>
+        <li>Darked Chocolate Brownie (Served Warm and Made with Choc fudge, Vanilla Ice Cream), $7.99</li>
+        <li>Browned Butter Pecan Bar (Made with Carmel Sauce, Whipped Cream), $9.99</li>
+        <li>Ice Cream + Sorbet, Three Scoops is $5.99, A La Mode Variation is $2.99, options include French Vanilla,
+            Cookies &amp; Cream, Chocolate, Sorbet </li>
+    </ul>
+    <h3 id="fountain-sodas">Fountain Sodas</h3>
+    <ul>
+        <li>Excel Bottoling Company Beverages, $2.99<ul>
+                <li>Lucky Club Soda </li>
+                <li>Diety Lucky Club Soda</li>
+                <li>Sparking Life Lemon/Lime</li>
+                <li>Frostie Root Beer</li>
+                <li>Lemonade </li>
+                <li>Black Cherry </li>
+                <li>R-Pep</li>
+                <li>Ski</li>
+            </ul>
+        </li>
+        <li>Iced Tea (Sweet or Unsweet), $2.99</li>
+        <li>Sam Pellegrino ($2.99)</li>
+    </ul>
 </body>
 
 </html>
