--- a/profile-card.html
+++ b/profile-card.html
@@ -13,7 +13,7 @@ INSTRUCTIONS:
    Paste this code into your new file.
    Save this file as the name "profile-card.html" and save it somewhere on your computer that you can easily access.
 
-4) Open this file ("profile-card.html") in a web browser — like Chrome, Firefox, Safari, Arc, etc.
+4) Open this file ("profile-card.html") in a web browser - like Chrome, Firefox, Safari, Arc, etc.
 
 5) Go back to VSCode and make sure to have "profile-card.html" open.
 
@@ -50,7 +50,7 @@ INSTRUCTIONS:
 
 <head>
     <!-- Where the word "Laurel" is below, put your name there instead. -->
-    <title>Mahkei — (Visual) Principles for Screen, Fall 2025, WashU</title>
+    <title>Mahkei - (Visual) Principles for Screen, Fall 2025, WashU</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="https://2026-spring-washu.veryinteractive.net/assets/css/class.css">
@@ -65,7 +65,7 @@ INSTRUCTIONS:
             /* Research aspect ratios and choose your favorite */
             /* Aspect ratios to consider:
            - 1:1
-           — 3:2
+           - 3:2
            - 4:5
            - 16:9
         */
@@ -131,13 +131,13 @@ INSTRUCTIONS:
             <div class="profile-bottom">
                 <div class="category">Aspect ratio</div>
                 <!-- Put the aspect ratio you chose above below -->
-                <div class="selection">16:9 — Widescreen</div>
+                <div class="selection">16:9 - Widescreen</div>
 
                 <div class="category">Color</div>
                 <!-- Put the color you chose below, along with its hex code 
                It's called a hex or hexadecimal code because there are six digits... 
                More here: https://en.wikipedia.org/wiki/Hexadecimal. -->
-                <div class="selection">Diamine Green — #1b8e13</div>
+                <div class="selection">Diamine Green - #1b8e13</div>
                 <!-- Colors on the web can also be displayed in RGB (red, green, blue) and some known color names.
                More here: https://en.wikipedia.org/wiki/Web_colors -->
 
@@ -154,7 +154,7 @@ INSTRUCTIONS:
                 <div class="selection">
                     <!-- Share some music below.
                  The tag below is a hyperlink or anchor tag,
-                 so place a link to some music — on Spotify, Soundcloud, YouTube, etc. 
+                 so place a link to some music - on Spotify, Soundcloud, YouTube, etc. 
                  and then what you want to title it inside of the <a> tag. -->
                     <a href="https://open.spotify.com/track/1odExI7RdWc4BT515LTAwj?si=4330a9ac64d94613">
                         Favorite Song of All Time
