--- a/reading3.html
+++ b/reading3.html
@@ -12,7 +12,7 @@
     <p>
         We have seen it portrayed in multiple forms of media, the concept of human and machine as one: a cyborg. Matt
         Webb discusses how close we are to this concept becoming a reality. Right now, the concept of Cyborgs exists at
-        wearables.
+        wearables. This can include headphones, earbuds, and
     </p>
     <hr>
     <a href="index.html">Back</a>
