--- a/p1/11css.html
+++ b/p1/11css.html
@@ -13,16 +13,30 @@
 
         h1 {
             font-family: 'Bebas Neue', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            display: inline-block;
+            border-style: solid;
+            border-color: #8b5e2b;
         }
 
         h2 {
             font-family:
         }
 
+        h3 {
+            color: rgb(128, 80, 17);
+        }
+
         a {
             color: rgb(150, 123, 71);
             font-family: 'Courier New', Helvetica, sans-serif;
 
+        }
+
+        hr {
+            border: none;
+            height: 2px;
+            background-color: #8b5e2b;
+            margin: 20px 0;
         }
 
         .locations {
@@ -42,6 +56,7 @@
             margin-bottom: 0px;
             padding-bottom: 25px;
             border-color: rgb(180, 136, 55);
+
 
         }
 
@@ -68,6 +83,9 @@
 
     <body>
         <h1 id="salt-smoke">SALT + SMOKE</h1>
+        <br>
+        <br>
+        <br>
         <section class="locations">
             <h2 id="where">Where</h2>
             <a href="https://maps.app.goo.gl/pJxzcKdc8irB6GdLA">6525 Delmar Blvd., St. Louis, MO 63130</a><br>
@@ -82,12 +100,15 @@
         <br>
         <section class="hours">
             <h2 id="when">When</h2>
-            <p>Sun–Thu: 11am–9pm<br>Fri–Sat: 11am–10pm </p>
+            <p><b>Sun–Thu: 11am–9pm<br>Fri–Sat: 11am–10pm </p></b>
         </section>
         <br>
         <br>
         <section class="food">
             <h2 id="what">What</h2>
+            <h3 id="appetizers">Appetizers</h3>
+            <hr>
+            <p> Trashed </p>
             <h3 id="salads">Salads</h3>
             <p><em>Half $8.99 • Side $4.99 • Full $13.99</em></p>
             <p>Caesar Salad<br>Kale Crunch Salad<br>Mixed Green Salad </p>
@@ -97,22 +118,18 @@
             <hr>
             <h3 id="sandwiches">Sandwiches</h3>
             <p><em>Served with choice of one side • GF/Vegan bun +$2</em></p>
-            <p>Pulled Pork - coleslaw, house pickles ............ $14.99<br>Brisket - burnt end mayo, tobacco onions
-                .........
-                $16.99<br>Cherry Smoked Salmon - cold; pickled onion, roasted red pepper, greens, smoked tomato mayo
-                ..........
-                $16.99<br>BLT - bacon, smoked tomato, lettuce, paprika aioli $13.99<br>Fried Jalapeño + Cheddar Bologna
-                -
-                chow
-                chow, honey grain mustard .................................. $13.99<br>Grilled Cheese - white American +
-                pimento
-                cheese .. $16.99 (brisket) / $14.99 (pulled chicken)<br>Falafel Burger - flaxseed mayo, greens, pepper
-                jelly
-                ................................................ $13.99<br>Oklahoma Bacon Cheeseburger - white American,
-                grilled
-                onions, S+S 1000 sauce ........................ $12.99 (single) / $15.99 (double)<br>Chicken Caesar Wrap
-                -
-                caesar, romaine, croutons, grilled flour tortilla .............................. $13.99 </p>
+            <p>Pulled Pork .............................................................
+                $14.99<br>
+                Brisket ................................................................. $16.99<br>
+                Cherry Smoked Salmon ................................... $16.99<br>
+                BLT............................................................... $13.99<br>
+                Fried Jalapeño + Cheddar Bolgna............... $13.99 <br>
+                Grilled Cheese ...................... $16.99 (brisket) / $14.99 (pulled chicken)<br>
+                Falafel Burger .........................................................................................
+                $13.99<br>
+                Oklahoma Bacon Cheeseburger .............................. $12.99 (single) / $15.99 (double)<br>
+                Chicken Caesar Wrap
+                ..................................................................................... $13.99 </p>
             <hr>
             <h3 id="plates">Plates</h3>
             <p><em>Bacon &amp; cheddar popover + two sides</em></p>
@@ -138,23 +155,22 @@
                 $4.99<br>Special Side ...................................... $4.99 </p>
             <hr>
             <h3 id="dessert">Dessert</h3>
-            <p>Lemon Gooey Butter Cake - berry compote, whipped cream .............................................
-                $8.99<br>Dark Chocolate Brownie - warm; choc fudge, vanilla ice cream
-                ........................................
-                $7.99<br>Browned Butter Pecan Bar - caramel sauce, whipped cream
-                .............................................
-                $9.99<br>Ice Cream + Sorbet - 3 scoops $5.99 • à la mode +$2.99 (French Vanilla, Cookies &amp; Cream,
-                Chocolate,
-                Sorbet) </p>
+            <p>Lemon Gooey Butter Cake .........................
+                $8.99<br>Dark Chocolate Brownie
+                .........................
+                $7.99<br>Browned Butter Pecan Bar
+                .........................
+                $9.99<br>Ice Cream + Sorbet ......................... $5.99 (3 Scoops) /$2.99 (à la mode)
+            </p>
             <hr>
             <h3 id="fountain-sodas">Fountain Sodas</h3>
-            <p>Excel Bottling Company Beverages .................. $2.99<br>Flavors: Lucky Club Soda • Diet Lucky Club
-                Soda
-                •
-                Sparkling Lemon/Lime • Frostie Root Beer • Lemonade • Black Cherry • R-Pep • Ski<br>Iced Tea
+            <p>Excel Bottling Company Beverages .................. $2.99<br>Iced Tea
                 (Sweet/Unsweet)
-                .......................... $2.99<br>Sam Pellegrino ................................... $2.99</p>
+                .......................... $2.99<br>Sam Pellegrino
+                ....................................................... $2.99</p>
         </section>
+        <br>
+        <br>
     </body>
 
     </html>
